--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "immutable-reducer",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "description": "Immutable Reducers based off of ImmutableJS",
   "keywords": [
@@ -37,7 +37,9 @@
     "eslint-config-airbnb": "^11.0.0",
     "eslint-plugin-import": "^1.4.0",
     "mocha": "^3.0.2",
-    "rimraf": "^2.5.2"
+    "redux-caller": "^1.1.9",
+    "rimraf": "^2.5.2",
+    "underscore": "^1.8.3"
   },
   "dependencies": {
     "babel-runtime": "^6.6.1",
